<li> 26/5/15 Bug-fixed input of tan beta scale in NMSSM in SLHA format
<li> 23/5/15 Bug-fixed one-loop Higgs mass corrections in NMSSM