@@ -8,7 +8,11 @@ Block MODSEL  # Select model
      3    1   # NMSSM
      9    0   # call micrOmegas (default: 0 = no)
     13    1   # sparticle decays via NMSDECAY (default: 0)
+<<<<<<< HEAD
     12    4.49424035e+02   # parameter output scale
+=======
+    12    4.52388688e+02   # parameter output scale
+>>>>>>> ca4cb75... Use exact field combination mixture for mA(1) in 2-loop tadpoles and protect against nans in pseudoscalar NMSSM calculations
 Block SMINPUTS             # Standard Model inputs
      1    1.27918000e+02   # alpha_em^(-1)(MZ) SM MSbar
      2    1.16639000e-05   # G_Fermi
@@ -24,6 +28,7 @@ Block MINPAR               # SUSY breaking input parameters
      2    2.00000000e+02   # m12
      5   -3.00000000e+02   # A0
 Block EXTPAR               # scale of SUSY breaking BCs
+<<<<<<< HEAD
      0    2.71624322e+16   # MX scale
 # SOFTSUSY-specific non SLHA information:
 # MIXING=2 Desired accuracy=1.00000000e-04 Achieved accuracy=7.92647223e-05
@@ -89,10 +94,40 @@ Block MASS                      # Mass spectrum
    1000004     5.96551249e+02   # ~c_L
    1000005     5.18173700e+02   # ~b_1
    1000006     3.80037374e+02   # ~t_1
+=======
+     0    2.70752299e+16   # MX scale
+# SOFTSUSY-specific non SLHA information:
+# MIXING=2 Desired accuracy=1.00000000e-04 Achieved accuracy=8.54611717e-05
+# Z3 = 1, SoftHiggsOut = 0
+Block MASS                      # Mass spectrum
+# PDG code     mass             particle
+        24     8.03773762e+01   # MW
+        25     1.06125536e+02   # h0(1)
+        35     4.59250884e+02   # h0(2)
+        45     5.13846134e+02   # h0(3)
+        36     4.75607043e+02   # A0(1)
+        46     5.17647660e+02   # A0(2)
+        37     5.19737813e+02   # H+
+   1000021     5.19588438e+02   # ~g
+   1000022     7.72506054e+01   # ~neutralino(1)
+   1000023     1.43487727e+02   # ~neutralino(2)
+   1000024     1.42956991e+02   # ~chargino(1)
+   1000025    -3.24124150e+02   # ~neutralino(3)
+   1000035     3.40829570e+02   # ~neutralino(4)
+   1000037     3.42812089e+02   # ~chargino(2)
+   1000045     5.37620675e+02   # ~neutralino(5)
+   1000001     6.01605469e+02   # ~d_L
+   1000002     5.96553836e+02   # ~u_L
+   1000003     6.01602898e+02   # ~s_L
+   1000004     5.96551244e+02   # ~c_L
+   1000005     5.18173714e+02   # ~b_1
+   1000006     3.80037398e+02   # ~t_1
+>>>>>>> ca4cb75... Use exact field combination mixture for mA(1) in 2-loop tadpoles and protect against nans in pseudoscalar NMSSM calculations
    1000011     4.22929541e+02   # ~e_L
    1000012     4.15128925e+02   # ~nue_L
    1000013     4.22932700e+02   # ~mu_L
    1000014     4.15121257e+02   # ~numu_L
+<<<<<<< HEAD
    1000015     4.00955026e+02   # ~stau_1
    1000016     4.12825295e+02   # ~nu_tau_L
    2000001     5.88855745e+02   # ~d_R
@@ -227,13 +262,157 @@ Block NMSSMRUN Q= 4.49424035e+02   # NMSSM specific DRbar parameters
      3    -1.73157618e+02      # Alambda(Q)
      4    -2.87928207e+02      # Akappa(Q)
      5     3.26933619e+02      # lambda*<S>(Q)
+=======
+   1000015     4.00954988e+02   # ~stau_1
+   1000016     4.12825296e+02   # ~nu_tau_L
+   2000001     5.88855740e+02   # ~d_R
+   2000002     5.88251678e+02   # ~u_R
+   2000003     5.88853064e+02   # ~s_R
+   2000004     5.88249060e+02   # ~c_R
+   2000005     5.84774319e+02   # ~b_2
+   2000006     5.79369416e+02   # ~t_2
+   2000011     4.08716919e+02   # ~e_R
+   2000013     4.08690386e+02   # ~mu_R
+   2000015     4.23561799e+02   # ~stau_2
+Block NMHmix                # CP even Higgs mixing matrix
+  1  1     1.07097056e-01   # S_{1,1}
+  1  2     9.92977583e-01   # S_{1,2}
+  1  3    -5.02567429e-02   # S_{1,3}
+  2  1     1.23373451e-01   # S_{2,1}
+  2  2     3.68844203e-02   # S_{2,2}
+  2  3     9.91674610e-01   # S_{2,3}
+  3  1     9.86564348e-01   # S_{3,1}
+  3  2    -1.12405778e-01   # S_{3,2}
+  3  3    -1.18556858e-01   # S_{3,3}
+Block NMAmix                # CP odd Higgs mixing matrix
+  1  1     2.86294955e-01   # P_{1,1}
+  1  2     2.86294957e-02   # P_{1,2}
+  1  3     9.57713710e-01   # P_{1,3}
+  2  1     9.52960759e-01   # P_{2,1}
+  2  2     9.52960767e-02   # P_{2,2}
+  2  3    -2.87722869e-01   # P_{2,3}
+Block NMNmix                # neutralino mixing matrix
+  1  1     9.80860573e-01   # N_{1,1}
+  1  2    -7.39912337e-02   # N_{1,2}
+  1  3     1.70293846e-01   # N_{1,3}
+  1  4    -5.82421968e-02   # N_{1,4}
+  1  5     6.75911859e-03   # N_{1,5}
+  2  1     1.29395741e-01   # N_{2,1}
+  2  2     9.37279196e-01   # N_{2,2}
+  2  3    -2.85731504e-01   # N_{2,3}
+  2  4     1.51558763e-01   # N_{2,4}
+  2  5    -1.23247747e-02   # N_{2,5}
+  3  1    -6.98830341e-02   # N_{3,1}
+  3  2     1.05476287e-01   # N_{3,2}
+  3  3     6.91041015e-01   # N_{3,3}
+  3  4     7.11476774e-01   # N_{3,4}
+  3  5     1.59445882e-02   # N_{3,5}
+  4  1    -1.27585106e-01   # N_{4,1}
+  4  2     3.23827126e-01   # N_{4,2}
+  4  3     6.39834775e-01   # N_{4,3}
+  4  4    -6.83170519e-01   # N_{4,4}
+  4  5     5.24169414e-02   # N_{4,5}
+  5  1     2.77133446e-03   # N_{5,1}
+  5  2    -6.61452254e-03   # N_{5,2}
+  5  3    -4.93080992e-02   # N_{5,3}
+  5  4     2.67699559e-02   # N_{5,4}
+  5  5     9.98399043e-01   # N_{5,5}
+Block Umix                  # chargino U mixing matrix 
+  1  1     9.06226360e-01   # U_{1,1}
+  1  2    -4.22792838e-01   # U_{1,2}
+  2  1     4.22792838e-01   # U_{2,1}
+  2  2     9.06226360e-01   # U_{2,2}
+Block Vmix                  # chargino V mixing matrix 
+  1  1     9.74312953e-01   # V_{1,1}
+  1  2    -2.25198291e-01   # V_{1,2}
+  2  1     2.25198291e-01   # V_{2,1}
+  2  2     9.74312953e-01   # V_{2,2}
+Block stopmix               # stop mixing matrix
+  1  1     4.98988574e-01   # F_{11}
+  1  2     8.66608564e-01   # F_{12}
+  2  1     8.66608564e-01   # F_{21}
+  2  2    -4.98988574e-01   # F_{22}
+Block sbotmix               # sbottom mixing matrix
+  1  1     9.92000510e-01   # F_{11}
+  1  2     1.26233865e-01   # F_{12}
+  2  1    -1.26233865e-01   # F_{21}
+  2  2     9.92000510e-01   # F_{22}
+Block staumix               # stau mixing matrix
+  1  1     3.62990770e-01   # F_{11}
+  1  2     9.31792735e-01   # F_{12}
+  2  1     9.31792735e-01   # F_{21}
+  2  2    -3.62990770e-01   # F_{22}
+Block gauge Q= 4.52388688e+02  # SM gauge couplings
+     1     3.60571522e-01   # g'(Q)MSSM DRbar
+     2     6.46217683e-01   # g(Q)MSSM DRbar
+     3     1.10691130e+00   # g3(Q)MSSM DRbar
+Block yu Q= 4.52388688e+02  
+  3  3     8.54018605e-01   # Yt(Q)MSSM DRbar
+Block yd Q= 4.52388688e+02  
+  3  3     1.37783925e-01   # Yb(Q)MSSM DRbar
+Block ye Q= 4.52388688e+02  
+  3  3     1.00432797e-01   # Ytau(Q)MSSM DRbar
+Block hmix Q= 4.52388688e+02 # Higgs mixing parameters
+     1     0.00000000e+00    # mu(Q)MSSM DRbar
+     2     9.77237158e+00    # tan beta(Q)MSSM DRbar Feynman gauge
+     3     2.45038117e+02    # higgs vev(Q)MSSM DRbar Feynman gauge
+     4     0.00000000e+00    # mA^2(Q)MSSM DRbar
+Block msoft Q= 4.52388688e+02  # MSSM DRbar SUSY breaking parameters
+     1     8.10000487e+01      # M_1(Q)
+     2     1.53180822e+02      # M_2(Q)
+     3     4.75696000e+02      # M_3(Q)
+    21     1.64285426e+05      # mH1^2(Q)
+    22    -9.91632626e+04      # mH2^2(Q)
+    31     4.19916388e+02      # meL(Q)
+    32     4.19908863e+02      # mmuL(Q)
+    33     4.17687762e+02      # mtauL(Q)
+    34     4.05909900e+02      # meR(Q)
+    35     4.05894223e+02      # mmuR(Q)
+    36     4.01251570e+02      # mtauR(Q)
+    41     5.84285254e+02      # mqL1(Q)
+    42     5.84282588e+02      # mqL2(Q)
+    43     5.03325498e+02      # mqL3(Q)
+    44     5.74790426e+02      # muR(Q)
+    45     5.74787720e+02      # mcR(Q)
+    46     3.96293809e+02      # mtR(Q)
+    47     5.73743542e+02      # mdR(Q)
+    48     5.73740768e+02      # msR(Q)
+    49     5.68631188e+02      # mbR(Q)
+Block au Q= 4.52388688e+02  
+  1  1    -7.15686815e+02      # Au(Q)MSSM DRbar
+  2  2    -7.15682764e+02      # Ac(Q)MSSM DRbar
+  3  3    -5.12341248e+02      # At(Q)MSSM DRbar
+Block ad Q= 4.52388688e+02  
+  1  1    -9.15273553e+02      # Ad(Q)MSSM DRbar
+  2  2    -9.15269718e+02      # As(Q)MSSM DRbar
+  3  3    -8.43425951e+02      # Ab(Q)MSSM DRbar
+Block ae Q= 4.52388688e+02  
+  1  1    -4.19524374e+02      # Ae(Q)MSSM DRbar
+  2  2    -4.19513208e+02      # Amu(Q)MSSM DRbar
+  3  3    -4.16218918e+02      # Atau(Q)MSSM DRbar
+Block NMSSMRUN Q= 4.52388688e+02   # NMSSM specific DRbar parameters
+     1     1.04813655e-01      # lambda(Q)
+     2     8.93377457e-02      # kappa(Q)
+     3    -1.81456142e+02      # Alambda(Q)
+     4    -2.86744517e+02      # Akappa(Q)
+     5     3.14943219e+02      # lambda*<S>(Q)
+>>>>>>> ca4cb75... Use exact field combination mixture for mA(1) in 2-loop tadpoles and protect against nans in pseudoscalar NMSSM calculations
      6     0.00000000e+00      # xiF(Q)
      7     0.00000000e+00      # xiS(Q)
      8     0.00000000e+00      # mu'(Q)
      9     0.00000000e+00      # mS'^2(Q)
+<<<<<<< HEAD
     10    -6.02663322e+04      # mS^2(Q)
 Block smumix               # smuon mixing matrix
   1  1     2.84383651e-02   # F_{11}
   1  2     9.99595548e-01   # F_{12}
   2  1     9.99595548e-01   # F_{21}
   2  2    -2.84383651e-02   # F_{22}
+=======
+    10    -6.74532479e+04      # mS^2(Q)
+Block smumix               # smuon mixing matrix
+  1  1     2.74658395e-02   # F_{11}
+  1  2     9.99622743e-01   # F_{12}
+  2  1     9.99622743e-01   # F_{21}
+  2  2    -2.74658395e-02   # F_{22}
+>>>>>>> ca4cb75... Use exact field combination mixture for mA(1) in 2-loop tadpoles and protect against nans in pseudoscalar NMSSM calculations
