@@ -16,12 +16,12 @@ loops: 3        thresholds: 1
 3.500000e+01 [ h0 tachyon h0 is tree-level tachyon at MZ ]
 =======
 # tan beta   mh(1)        mh(2)        mA(1)        mA(2)        mH+-
-5.000000e+00 1.065534e+02 7.140438e+02 5.848827e+02 7.217532e+02 7.252742e+02
-1.000000e+01 1.080072e+02 5.006623e+02 5.003792e+02 6.808040e+02 6.855297e+02
-1.500000e+01 1.063283e+02 4.065600e+02 4.588974e+02 6.588217e+02 6.643126e+02
-2.000000e+01 1.034607e+02 3.411949e+02 4.273554e+02 6.340873e+02 6.406746e+02
-2.500000e+01 9.846415e+01 2.846828e+02 3.974847e+02 6.041707e+02 6.120362e+02
-3.000000e+01 8.787126e+01 2.318495e+02 3.657557e+02 5.685831e+02 5.780358e+02
+5.000000e+00 1.065534e+02 7.140594e+02 5.848881e+02 7.217699e+02 7.252909e+02
+1.000000e+01 1.080073e+02 5.006762e+02 5.003853e+02 6.808338e+02 6.855594e+02
+1.500000e+01 1.063282e+02 4.065735e+02 4.589039e+02 6.588662e+02 6.643566e+02
+2.000000e+01 1.034602e+02 3.412049e+02 4.273606e+02 6.341365e+02 6.407234e+02
+2.500000e+01 9.846165e+01 2.846819e+02 3.974840e+02 6.041838e+02 6.120493e+02
+3.000000e+01 8.785752e+01 2.318244e+02 3.657378e+02 5.684413e+02 5.778966e+02
 3.500000e+01 [ No convergence h0 tachyon Not in global min of Higgs potential ]
 >>>>>>> 4852b88... Bug-fixed input of tan beta scale in NMSSM in SLHA format
 4.000000e+01 [ h0 tachyon h0 is tree-level tachyon at MZ ]
